--- a/about.html
+++ b/about.html
@@ -19,14 +19,14 @@
         
         <nav class="nav">
             <ul class="navbar">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="about.html">Acerca de</a></li>
-                <li><a href="contact.html">Contacto</a></li>
+                <li class="nav-link"><a href="index.html">Inicio</a></li>
+                <li class="nav-link"><a href="about.html">Acerca de</a></li>
+                <li class="nav-link"><a href="contact.html">Contacto</a></li>
             </ul>
         </nav>
 
         <label for="menu-toggle" class="menu-toggle-label">☰</label>
-    </header>   
+    </header>    
 
     <section class="about container-fluid">
         <div class="container">
