--- a/contact.html
+++ b/contact.html
@@ -27,14 +27,14 @@
         
         <nav class="nav">
             <ul class="navbar">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="about.html">Acerca de</a></li>
-                <li><a href="contact.html">Contacto</a></li>
+                <li class="nav-link"><a href="index.html">Inicio</a></li>
+                <li class="nav-link"><a href="about.html">Acerca de</a></li>
+                <li class="nav-link"><a href="contact.html">Contacto</a></li>
             </ul>
         </nav>
 
         <label for="menu-toggle" class="menu-toggle-label">☰</label>
-    </header>  
+    </header>   
     
     <section class="contact container-fluid">
         <div class="container">
@@ -80,7 +80,7 @@
                                 </li>
                                 <li>
                                     <a href="https://github.com/GonzaloRios10" target="_blank">
-                                        <i class="fa-brands fa-instagram"></i> Github
+                                        <i class="fa-brands fa-github"></i> Github
                                     </a>
                                 </li>
                             </ul>
